Deployments/Ingress/extension.mentor.gg/extension-upload-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: extension-upload-api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "extension-upload-letsencrypt-issuer"

    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";

spec:
  tls:
  - hosts:
    - extension.mentor.gg
    secretName: extension-upload-letsencrypt-key
  rules:
  - host: extension.mentor.gg
    http:
      paths:
      - path: /
        backend:
          serviceName: mentor-interface-test
          servicePort: 80
